fixed some minor issues and deplyed to heroku

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -11,14 +11,13 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-          <h1 class="text-center"><span class="fa fa-fire">/span>FriendFinder Home</h1>
+          <h1 class="text-center"><span class="fa fa-fire"></span>FriendFinder Home</h1>
           <hr>
           <h2 class="text-center">Find a Friend</h2>
           <br>
     
           <div class="text-center">
-            <a href="/tables"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> View Tables</button></a>
-            <a href="/reserve"><button class="btn btn-lg btn-danger"><span class="fa fa-credit-card"></span> Make Reservation</button></a>
+            <a href="/tables"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> <i class="icon-user"></i> View Friends</button></a>
           </div>
     
         </div>
