--- a/app/public/home.html
+++ b/app/public/home.html
@@ -17,7 +17,8 @@
           <br>
     
           <div class="text-center">
-            <a href="/tables"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> <i class="icon-user"></i> View Friends</button></a>
+            <a href="/api/friends"><button class="btn btn-lg btn-primary"><span class="fa fa-list-alt"></span> <i class="icon-user"></i> View Friends</button></a>
+            <a href="/survey"><button class="btn btn-lg btn-secondary"><span class="fa fa-list-alt"></span> <i class="icon-user"></i> FriendFinder Form</button></a>
           </div>
     
         </div>
