--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -1,13 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Survey</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">  
 </head>
+
 <body>
-    <h1>Friend Finder Survey:</h1>
-    
+
+    <div class="container">
+
+        <div class="jumbotron">
+            <h1 class="text-center">
+                <span class="fa fa-fire"></span>FriendFinder</h1>
+            <hr>
+            <h2 class="text-center">Submit your info to match up with a friend!</h2>
+            <br>
+
+            <div class="text-center">
+                <a href="/api/friends">
+                    <button class="btn btn-lg btn-primary">
+                        <span class="fa fa-list-alt"></span> View Possible Friends</button>
+                </a>
+                <a href="/">
+                    <button class="btn btn-lg btn-default">
+                        <span class="fa fa-home">Home</span>
+                    </button>
+                </a>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12">
+
+                <!-- Reservation Page -->
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">Friend Form</h4>
+                    </div>
+                    <div class="panel-body">
+
+                        <form role="form">
+
+                            <div class="form-group">
+                                <label for="reserve-name">Name</label>
+                                <input type="text" class="form-control" id="user-name">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="reserve-phone">Photo Upload</label>
+                                <input type="text" class="form-control" id="user-photo">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="user-data">data</label>
+                                <input type="text" class="form-control" id="user-data">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="user-unique-id">Unique ID</label>
+                                <input type="text" class="form-control" id="user-unique-id">
+                            </div>
+
+                            <button type="submit" class="btn btn-primary submit">Submit</button>
+                        </form>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+        <script type="text/javascript">
+
+            $(".submit").on("click", function (event) {
+                event.preventDefault();
+
+                // Here we grab the form elements
+                var newUser = {
+                    name: $("#user-name").val().trim(),
+                    photo: $("#user-photo").val().trim(),
+                    scores: $("#user-data").val().split("")
+                };
+
+                console.log(newUser);
+
+                $.post("/api/friends", newReservation,
+                    function (data) {
+
+                        // If a table is available... tell user they are booked.
+                        if (data) {
+                            alert("Yay, Here's your closest match.");
+                        }
+
+                        // If a table is available... tell user they on the waiting list.
+                        else {
+                            alert("Sorry no matches yet.");
+                        }
+
+                        // Clear the form when submitting
+                        $("#user-name").val("");
+                        $("#user-photo").val("");
+                        $("#user-data").val("");
+                    });
+
+            });
+
+        </script>
+
 </body>
+
 </html>
